<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.polymtl.inf8405.lab2.Activities.MainActivity$PlaceholderFragment">


    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:background="#818080"
        android:contentDescription="@string/title_profile"
        android:padding="1dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/img_profile"
        android:text="@string/camera" />

    <EditText
        android:id="@+id/txt_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_camera"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/view_margin"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_alias" />

    <EditText
        android:id="@+id/txt_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_alias"
        android:layout_marginTop="@dimen/view_margin"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_group" />


</RelativeLayout>
