<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.polymtl.inf8405.lab2.Activities.MainActivity$PlaceholderFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/lbl_InternetStatus"
                app:srcCompat="@drawable/internet" />

            <TextView
                android:id="@+id/lbl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dim_start_padding"
                android:text="@string/lbl_InternetStatus"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_start_padding" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/lbl_BatteryStatus"
                app:srcCompat="@drawable/battery" />

            <TextView
                android:id="@+id/lbl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dim_start_padding"
                android:text="@string/lbl_BatteryStatus"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_start_padding" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/lbl_Latitude"
                app:srcCompat="@drawable/latitude" />

            <TextView
                android:id="@+id/lbl3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dim_start_padding"
                android:text="@string/lbl_Latitude"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_start_padding" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/lbl_Longitude"
                app:srcCompat="@drawable/longitude" />

            <TextView
                android:id="@+id/lbl4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dim_start_padding"
                android:text="@string/lbl_Longitude"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_start_padding" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
